--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-tower": "^0.20.1",
     "chokidar": "^3.4.0",
     "doormen": "^0.11.0",
+    "exm": "github:cronvel/exm",
     "glob": "^7.1.6",
     "nextgen-events": "^1.3.0",
     "seventh": "^0.7.35",
