--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spellcast-ext-caster",
-  "version": "0.50.5",
+  "version": "0.50.6",
   "description": "Spellcast's Caster extension.",
   "main": "lib/extension.js",
   "engines": {
@@ -29,6 +29,10 @@
     "spellbook",
     "magic",
     "wizardry",
+    "task",
+    "runner",
+    "file",
+    "watcher",
     "dependency"
   ],
   "author": "Cédric Ronvel",
